--- a/osm-xapi.cabal
+++ b/osm-xapi.cabal
@@ -19,7 +19,7 @@ extra-source-files:
 
 library
   build-depends:
-    base >=4.6 && <4.7
+    base >=4.6 && <4.7,
     bytestring,
     comonad >=4,
     data-lens,
